fixed some styling

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 
     <!-- Google Font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Nunito+Sans:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Rock+Salt&display=swap" rel="stylesheet">
+
     <title>My Notes</title>
   </head>
   <body>
