--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,14 +8,29 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="image/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="image/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="image/favicon/apple-touch-icon.png">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="image/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="image/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="image/favicon/apple-touch-icon.png"
+    />
 
-    <!-- Google Font-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Rock+Salt&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Rock+Salt&display=swap"
+      rel="stylesheet"
+    />
 
     <title>My Notes</title>
   </head>
